<resources>
    <string name="app_name">QuantumChessApp</string>

    <string name="offline_game">Offline Game</string>
    <string name="online_game">Online Game</string>
    <string name="exit">exit</string>

    <string name="title_activity_game">GameActivity</string>
    <string name="board">board</string>
    <string name="nextPlayer">next Player</string>
    <string name="username">username</string>
    <string name="show_username_online">show username online</string>
    <string name="confirm">confirm</string>
    <string name="quantum">quantum</string>
    <string name="normal">normal</string>
    <string name="logo">logo</string>
    <string name="piece">piece</string>
    <string name="ki">ki</string>
</resources>
