<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="180dp"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintVertical_bias="0.4" android:id="@+id/btnContainer">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/accName" android:hint="@string/username"/>
        <CheckBox
                android:text="@string/show_username_online"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/show_username_online" android:checked="true"/>
        <Button
                android:text="@string/confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirm"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>