<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@android:color/darker_gray"
                                             tools:context=".Activities.MainMenuActivity" android:id="@+id/background_main_menu"
                                             android:minHeight="250dp">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="180dp"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintVertical_bias="0.4" android:id="@+id/btnContainer">
        <Button
                android:text="@string/offline_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/offlineGame" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.191"
                app:layout_constraintVertical_bias="0.213"/>
        <Button
                android:text="@string/online_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/onlineGame" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.191"
                app:layout_constraintVertical_bias="0.213"/>
        <Button
                android:text="@string/exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/beenden" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.191"
                app:layout_constraintVertical_bias="0.213"/>
    </LinearLayout>
    <ImageView
            android:layout_width="130dp"
            android:layout_height="123dp" app:srcCompat="@drawable/logo" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp" android:id="@+id/logo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.796"
            android:clickable="false" android:scaleType="centerInside" android:soundEffectsEnabled="false"
            android:tint="#00AA6666" android:contentDescription="@string/logo"/>
</android.support.constraint.ConstraintLayout>